--- a/my-website/css/home.css
+++ b/my-website/css/home.css
@@ -41,6 +41,7 @@
     }
 
     .list img {
+      min-width: 100px;
       width: 150px;
       margin-right: 10px;
       cursor: pointer;
@@ -144,6 +145,7 @@
       width: 120px;
       border-radius: 5px;
       cursor: pointer;
+      min-width: 100px;
     }
 
     .search-modal .close {
@@ -154,14 +156,17 @@
     }
 
 /* MOBILE DISPLAY START */
-@media (max-width: 768px) {
+@media (max-width: 480px) {
   .navbar {
-    flex-direction: row;
+    flex-direction: column;
     align-items: flex-start;
   }
 
   .nav-links {
-    flex-direction: row;
+    overflow-x: auto;
+    white-space: nowrap;
+    flex-direction: column;
+    align-items: flex-start;
     width: 100%;
     gap: 10px;
     margin-top: 10px;
@@ -169,6 +174,7 @@
 
   .nav-links a, .search-bar {
     width: 100%;
+    display: inline-block;
   }
 
   .search-bar {
@@ -180,15 +186,17 @@
   }
     
   .modal-body {
+    flex-direction: column;
     align-items: center;
   }
 
   .modal-body img {
-    width: 40%;
+    width: 80%;
   }
 
   .modal-text {
     text-align: center;
+    margin-top: 10px;
   }
 
   .list {
@@ -223,6 +231,7 @@
 
   .row h2 {
     font-size: 18px;
+    margin: 10px;
   }
 
   .modal-content {
