--- a/my-website/css/home.css
+++ b/my-website/css/home.css
@@ -219,18 +219,18 @@
       height: 30vh;
   }
     
+  @media (max-width: 380px) {
   .modal-body {
     flex-direction: column;
-    align-items: center;
   }
 
   .modal-body img {
     width: 80%;
+    margin-bottom: 15px;
   }
 
   .modal-text {
-    text-align: center;
-    margin-top: 10px;
+    font-size: 0.9rem;
   }
 
   .list {
@@ -279,6 +279,11 @@
     font-size: 24px;
     top: 10px;
     right: 20px;
+
+   @media (max-width: 400px) {
+  .footer-links {
+    flex-direction: column;
+    align-items: center;
   }
 }
 /* MOBILE DISPLAY END */
